# cn-ru_dictapp

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: b151f9728af6_create_entries.py
scripts/: import_dsl.py  seed.py
src/dictapp/: admin.py  db.py  main.py  models.py  repo.py  schemas.py  settings.py
src/dictapp/templates/: base.html  entry.html  index.html  results.html
